@@ -753,7 +753,7 @@ struct
 (*    flag ["ocaml"; "doc";     "use_sexplib"]  & S[A"-predicates"; A "!preprocessor"; A "-package"; A "sexplib"]*)
 
     flag ["ocaml"; "link"; "native"; "use_batteries_threads"] (A "src/main/threads/batteries.cma");
-(*    flag ["ocaml"; "pp";       "use_pa_optcomp"] (A"build/optcomp/pa_optcomp.cmo");*)
+(*    flag ["ocaml"; "pp";       "use_pa_optcomp"] (A"_build/optcomp/pa_optcomp.cmo");*)
     dep  ["ocaml"; "ocamldep"; "use_pa_optcomp"] ["src/main/threads/batteries.cma"]
 
 
