@@ -4,5 +4,5 @@
 <findlib>:      include
 <sexplib>:      include
 <compilers>:    include
-<*.ml>:  pkg_netstring,pkg_sexplib,pkg_bin_prot,pkg_sexplib.syntax
-<*.mli>: pkg_netstring,pkg_camomile,pkg_sexplib,use_optcomp_o
+<*.ml>:  pkg_netstring,pkg_netclient,pkg_sexplib,pkg_bin_prot,pkg_sexplib.syntax
+<*.mli>: pkg_netstring,pkg_netclient,pkg_camomile,pkg_sexplib,use_optcomp_o
