@@ -6,3 +6,4 @@ ExtNetdate
 ExtFindlib
 ExtSexp_Conv
 Compilers
+Http
