@@ -1,4 +1,4 @@
 <*.cmx> :for-pack(Libs)
 <*>:     debug
-<*.ml>:   pkg_netstring,pkg_sexplib,pkg_bin_prot,pkg_sexplib.syntax,syntax_camlp4o
-<*.mli>: pkg_netstring,pkg_camomile,pkg_sexplib
+<*.ml>:  pkg_netstring,pkg_netclient,pkg_sexplib,pkg_bin_prot,pkg_sexplib.syntax,syntax_camlp4o
+<*.mli>: pkg_netstring,pkg_netclient,pkg_camomile,pkg_sexplib
