@@ -1,1 +1,1 @@
-<*>: debug,pkg_sexplib,pkg_camomile,pkg_str,pkg_findlib,pkg_camlzip,pkg_zip,pkg_netstring,pkg_dynlink
+<*>: debug,pkg_sexplib,pkg_camomile,pkg_str,pkg_findlib,pkg_camlzip,pkg_zip,pkg_netstring,pkg_netclient,pkg_dynlink,linkall
