@@ -1,4 +1,4 @@
 <*>  :pkg_threads
 <batteries.cma>         :autolib
-<*>: debug,pkg_sexplib,pkg_camomile,pkg_str,pkg_findlib,pkg_camlzip,pkg_zip,pkg_netstring,pkg_dynlink
+<*>: debug,pkg_sexplib,pkg_camomile,pkg_str,pkg_findlib,pkg_camlzip,pkg_zip,pkg_netstring,pkg_netclient,pkg_dynlink
 <run.native>: debug,link_all,pkg_sexplib,pkg_camomile,pkg_str,pkg_findlib,pkg_camlzip,pkg_zip,pkg_netstring,pkg_dynlink
